<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.alura.trabalho1_dcc196.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btnCadastroParticipante"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/participante"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="16dp"
        app:layout_constraintRight_toLeftOf="@+id/btnCadastroReserva"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastro"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="22dp" />

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cadastros"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="MissingConstraints"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="73dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btnCadastroReserva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reserva"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toLeftOf="@+id/btnCadastroLivros"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="20dp" />

    <Button
        android:id="@+id/btnCadastroLivros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/livro"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="27dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="27dp" />

    <ListView
        android:id="@+id/lstParticipantes"
        android:layout_width="0dp"
        android:layout_height="323dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
